# EEG-Classification

./: .gitignore  README.md  fourier_transform_trial_tool.py  improved_pipeline.py  pyproject.toml  requirements.txt  starter_pipeline.py
eeg/: __init__.py
eeg/data/: __init__.py  loader.py
eeg/features/: __init__.py  spectral.py
eeg/models/: __init__.py  classical.py  eegnet.py  riemannian.py
eeg/training/: __init__.py  loocv.py
eeg/utils/: __init__.py  metrics.py  optional_deps.py
experiments/: config.yaml  run_all.py
