[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eeg-emotional-memory"
version = "1.0.0"
description = "EEG-based emotional memory classification: multi-band features, EEGNet, and Riemannian geometry"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mohanad Sherif" }]
keywords = ["eeg", "bci", "neuroscience", "machine-learning", "deep-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "h5py>=3.8",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
deep       = ["torch>=2.0"]
riemannian = ["pyriemann>=0.5"]
dev        = ["pytest>=7.0", "ruff", "black"]
all        = ["eeg-emotional-memory[deep,riemannian,dev]"]

[tool.ruff]
line-length = 100
